# flash-attention-minimal

./: .clang-format  CMakeLists.txt  README.md  flash-attention.cpp  flash.cu
